--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
 	"name": "fcc-learn-node-with-express",
 	"version": "0.1.0",
 	"dependencies": {
-		"express": "^4.14.0",
 		"body-parser": "^1.15.2",
 		"cookie-parser": "^1.4.3",
-		"fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
+		"express": "^4.14.0",
+		"fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git",
+		"netlify-lambda": "^2.0.3",
+		"serverless-http": "^2.7.0"
 	},
 	"main": "server.js",
+	"devDependencies": {},
 	"scripts": {
-		"start": "node server.js"
+		"start": "NODE_ENV=development ./node_modules/.bin/netlify-lambda serve src",
+		"build": "NODE_ENV=production ./node_modules/.bin/netlify-lambda build src"
 	}
 }
