--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"main": "server.js",
 	"devDependencies": {},
 	"scripts": {
-		"start": "NODE_ENV=development ./node_modules/.bin/netlify-lambda serve src",
-		"build": "NODE_ENV=production ./node_modules/.bin/netlify-lambda build src"
+		"start": "./node_modules/.bin/netlify-lambda serve src",
+		"build": "./node_modules/.bin/netlify-lambda build src"
 	}
 }
